# vaultfire-crewai

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_client.py
vaultfire_crewai/: __init__.py  abis.py  chains.py  client.py  scoring.py  tools.py
